--- a/eventpage.html
+++ b/eventpage.html
@@ -58,9 +58,9 @@
 	<!-- event details div -->
 	<div class="col-sm-4">
 		<div class="headers">
-		<div class="row" ><h3>at tellus at urna condimentum</h3></div>
-		<div class="row" ><h5>29th September. </h5></div>
-		<div class="row" ><h5>Location: Indiana Memorial Union </h5></div>
+		<div class="row" ><h3 id="event_title"></h3></div>
+		<div class="row" ><h5 id="event_date"></h5></div>
+		<div class="row" ><h5 id="event_location"></h5></div>
 		<div class="row" style="color:#726868"><h5>10am-3pm</h5></div>
 		<br><br><br><br><br><br>
 		</div>
@@ -81,14 +81,14 @@
 			<div class="page-header"><h3>Description</h3></div>
 		 </div>
 		<div class="row" style="width:90%;">
-			<div><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p></div>
+			<div><p id="event_description"> </p></div>
 		</div>
     </div>
 		<br>
 	
     <div class="col-sm-4">    
 		<div class="row" >
-			<iframe src="map.html" style="width:100%;position:relative;left:0%;"></iframe>
+			<iframe id="myIframe" style="width:100%;position:relative;left:0%;"></iframe>
 		</div>
 		<br><br><br>
 		
@@ -97,14 +97,18 @@
 		</div><br>
 		
 		<div class="row">
-			<div class="col-sm-6"><h5>Email:event@corp.com</h5></div>
+			<div class="col-sm-6"><h5 id="created_by"></h5></div>
 		</div>
 		
 		<div class="row">
-			<div class="col-sm-6"><h5><span class="glyphicon glyphicon-earphone"></span>:812555555</h5></div>
+			<div class="col-sm-6"><h5>event@corp.com</h5></div>
+
+		
+	
+			<div class="col-sm-6"><h5>812555555</h5></div>
 		</div><br>
 		
-		<div class="row" style="text-align:center">
+	<!--	<div class="row" style="text-align:center">
 					<div class="page-header"><h5>TAGS</h5></div>
 				
 		</div>	
@@ -113,7 +117,7 @@
 			<button style="border-radius:5px;border:1px solid black;color:white;background-color:black;">qwe</button>
 			<button style="border-radius:5px;border:1px solid black;color:white;background-color:black;">123</button>
 			<b>#abc #xyz </b>
-		</div>	
+		</div>	-->
 	</div>
 
 </div>
@@ -292,9 +296,9 @@
 		  </footer>
 
 <script>
-$(document).ready(
-textFit(document.querySelector("title"));
 
+/*textFit(document.querySelector("title"));
+*/
 
 /*
 var i;
@@ -305,8 +309,20 @@ for(i=0;i<divs.length;i++) {
   }
 }
 */
+var t='{"event_name":"IMU Late Night","event_date":"20th November","event_location":"Indiana Memorial Union,Bloomington,Indiana","event_description":"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.","created_by":"IU"}';
+var temp=JSON.parse(t);
 
-)
+document.getElementById("event_title").innerHTML=temp.event_name;
+document.getElementById("event_date").innerHTML=temp.event_date;
+document.getElementById("event_location").innerHTML=temp.event_location;
+document.getElementById("event_description").innerHTML=temp.event_description;
+document.getElementById("created_by").innerHTML=temp.created_by;
+
+var loc=temp.event_location;
+
+/*passing parameter to iframe*/
+document.getElementById('myIframe').src = "map.html?seed=" + loc;
+
 </script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBRL6D4jfWOtmDd3ge1pRtkEx6OtrqdU8c&callback=myMap"></script>
 
