--- a/map.html
+++ b/map.html
@@ -9,6 +9,12 @@
 <div id="map" style="width:100%;height:100%;position:relative;"></div>
 
 <script>
+var seed = window.location.search.substring(window.location.search.indexOf('seed=') + 5);
+if (seed.indexOf('&') >= 0) {
+    seed = seed.substring(0, seed.indexOf('&'));
+}
+
+
 $(document).ready(
 function initMap() {
 	geocoder = new google.maps.Geocoder();
@@ -27,7 +33,7 @@ function initMap() {
   */
   
   
-      var address = "Indiana Memorial Union, Bloomington,IN.";
+      var address =seed;
     geocoder.geocode( { 'address': address}, function(results, status) {
       if (status == 'OK') {
         map.setCenter(results[0].geometry.location);
