Integration level1. Need to fix Persistence errors

--- a/src/main/resources/static/HomePage.html
+++ b/src/main/resources/static/HomePage.html
@@ -117,7 +117,7 @@
 					  <div class="card-body">
 					    <h5 class="card-title">IU Hoosiers vs Michigan State Spartans</h5>
 					    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					    <a id="eventtilebtn" href="#" class="btn btn-primary">Know more</a>
+					    <a id="eventtilebtn" href="eventpage.html" class="btn btn-primary">Know more</a>
 					  </div>
 					</div>
 				</div>
