--- a/src/main/resources/static/eventpage.html
+++ b/src/main/resources/static/eventpage.html
@@ -64,7 +64,7 @@
 		<div class="row" style="color:#726868"><h5>10am-3pm</h5></div>
 		<br><br><br><br><br><br>
 		</div>
-		<div class="row" style="bottom:10%;position:relative"><button class="btn-block register_button" >REGISTER</button></div>
+		<div class="row" style="bottom:10%;position:relative"><a href="Payment Portal.html"><button class="btn-block register_button" >REGISTER</button></div></a>
 	</div>
 
 </div>	
