--- a/src/main/resources/static/create_event.html
+++ b/src/main/resources/static/create_event.html
@@ -1,8 +1,11 @@
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
+  <script src="script/createEvent.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="create_event.css">
@@ -144,7 +147,7 @@ ADD CUSTOM TAGS
 <div class="row">
 <div class="col-sm-4"></div>
 <div class="col-sm-4">
-<button class="btn-block create_button"><h5>HOST EVENT </h5></button>
+<button class="btn-block create_button" onClick="saveEvent()"><h5>HOST EVENT </h5></button>
 </div>
 <div class="col-sm-4"></div>
 </div>
