--- a/eventpage.html
+++ b/eventpage.html
@@ -28,16 +28,20 @@
       <a class="navbar-brand" href="#" id="abc">HoosierEvents</a>
     </div>
     <ul class="nav navbar-nav">
-      <li><a href="#" style="color:white !important;text-align:">Home</a></li>
+      <li id="homepage"><a href="#" id="" style="color:white;text-align:">Home</a></li>
     </ul>
-    <form class="navbar-form navbar-left" action="">
+	<ul class="nav navbar-nav" id="explore">
+      <li><a href="search_events.html" style="color:white;text-align:">Explore Events</a></li>
+    </ul>
+	
+<!--    <form class="navbar-form navbar-left" action="">
       <div class="form-group">
         <input type="text" class="form-control" style="text-align:center;" placeholder="search for events!">
       </div>
       <button type="submit" class="btn btn-default" style="height:4.5% !important;width:15%!important;position:relative"><span class="glyphicon glyphicon-search"></span></button>
-    </form>
+    </form> -->
 	<ul class="nav navbar-nav navbar-right">
-	 <li><a href="create_event.html" style="color:white !important;">Create Event</a></li>
+	 <li><a id="createevent" href="create_event.html" style="color:white !important;">Create Event</a></li>
       <li><a href="#" style="color:white !important;"><span class="glyphicon glyphicon-user"></span> Sign In</a></li>
     </ul>
 
@@ -45,26 +49,27 @@
 </nav>
 	
 	
-<div class="container-fluid" style="background-color:#EFEAEA;">	
+<div class="container-fluid" style="background-color:;">	
 <div class="container" style="width:90%;top:10%;position:relative;background-color:;-bottom:0.5px groove #F4EFFE">
 <div class="row">
 	<!-- IMAGE DIV -->
 	<div class="col-sm-8">
 		<div class="row">
-		<img src="events.jpg" class="" style="width:640px;height:360px;max-height:40%;max-width:100%;">
+		<img src="events.jpg" class="" style="width:740px;height:360px;max-height:40%;max-width:100%;">
 		</div>
 	</div>
-
+<br>
 	<!-- event details div -->
-	<div class="col-sm-4">
+	<div class="col-sm-4" >
 		<div class="headers">
 		<div class="row" ><h3 id="event_title"></h3></div>
 		<div class="row" ><h5 id="event_date"></h5></div>
 		<div class="row" ><h5 id="event_location"></h5></div>
 		<div class="row" style="color:#726868"><h5>10am-3pm</h5></div>
-		<br><br><br><br><br><br>
+		<div class="row" style="color:green"><h5>TICKETS:Available</h5></div>
+		<br><br><br>
 		</div>
-		<div class="row" style="bottom:10%;position:relative"><button class="btn-block register_button" >REGISTER</button></div>
+		<div class="row" style="bottom:10%;position:relative"><button class="btn-block register_button" ><h5>REGISTER<h5></button></div>
 	</div>
 
 </div>	
@@ -84,18 +89,18 @@
 			<div><p id="event_description"> </p></div>
 		</div>
     </div>
-		<br>
+		<br><br><br>
 	
     <div class="col-sm-4">    
 		<div class="row" >
 			<iframe id="myIframe" style="width:100%;position:relative;left:0%;"></iframe>
 		</div>
-		<br><br><br>
+		<br>
 		
-		<div class="row">
-			<h4>Event Contact Information:</h4>
-		</div><br>
-		
+		<div class="row page-header">
+			<div class="col-sm-8"><h4>Contact Information:</h4></div>
+			<div class="col-sm-4"><button class="btn-block chat-button">Chat</button></div>
+		</div>
 		<div class="row">
 			<div class="col-sm-6"><h5 id="created_by"></h5></div>
 		</div>
@@ -309,6 +314,7 @@ for(i=0;i<divs.length;i++) {
   }
 }
 */
+
 var t='{"event_name":"IMU Late Night","event_date":"20th November","event_location":"Indiana Memorial Union,Bloomington,Indiana","event_description":"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.","created_by":"IU"}';
 var temp=JSON.parse(t);
 
@@ -323,6 +329,33 @@ var loc=temp.event_location;
 /*passing parameter to iframe*/
 document.getElementById('myIframe').src = "map.html?seed=" + loc;
 
+var event_id=117;
+/*
+	AJAX CALL TO POPULATE PAGE
+$(document).ready(function(){
+	$.ajax({
+	type:'POST',
+	dataType:'json',
+	data:({id:event_id}),
+	url:"/get-event-details",
+	  success: function(data) {
+			console.log('success',data);
+	   },
+	   error:function(exception){alert('Exeption:'+exception);}
+	}); 
+	
+	/*AJAX CALL TO RETRIEVE DETAILS
+	 $.get("/get-event-details", function(data, status){
+            alert("Data: " + data + "\nStatus: " + status);
+			var data_var=JSON.parse(t
+			document.getElementById("event_title").innerHTML=data_var.event_name;
+			document.getElementById("event_date").innerHTML=data_var.event_date;
+			document.getElementById("event_location").innerHTML=data_var.event_location;
+			document.getElementById("event_description").innerHTML=data_var.event_description;
+			document.getElementById("created_by").innerHTML=data_var.created_by;
+        });
+	});	
+*/
 </script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBRL6D4jfWOtmDd3ge1pRtkEx6OtrqdU8c&callback=myMap"></script>
 
