--- a/src/main/resources/static/eventpage.html
+++ b/src/main/resources/static/eventpage.html
@@ -4,7 +4,9 @@
   <title>Bootstrap Example</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="C:\dev\bootstrap-3.3.7\dist\css\bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
+
+  
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="eventpage.css">
