--- a/src/main/resources/static/eventpage.html
+++ b/src/main/resources/static/eventpage.html
@@ -203,24 +203,24 @@ var loc=temp.event_location;
 document.getElementById('myIframe').src = "map.html?seed=" + loc;
 
 var event_id=117;
-/*
-	AJAX CALL TO POPULATE PAGE
+
+	//AJAX CALL TO POPULATE PAGE
 $(document).ready(function(){
 	$.ajax({
 	type:'POST',
 	dataType:'json',
-	data:({id:event_id}),
-	url:"/get-event-details",
+	data: {id:event_id},
+	url:"/getEvent",
 	  success: function(data) {
 			console.log('success',data);
 	   },
 	   error:function(exception){alert('Exeption:'+exception);}
 	}); 
 	
-	/*AJAX CALL TO RETRIEVE DETAILS
-	 $.get("/get-event-details", function(data, status){
+	//AJAX CALL TO RETRIEVE DETAILS
+	 $.get("/getEvent", function(data, status){
             alert("Data: " + data + "\nStatus: " + status);
-			var data_var=JSON.parse(t
+			var data_var=JSON.parse(data);
 			document.getElementById("event_title").innerHTML=data_var.event_name;
 			document.getElementById("event_date").innerHTML=data_var.event_date;
 			document.getElementById("event_location").innerHTML=data_var.event_location;
@@ -228,7 +228,7 @@ $(document).ready(function(){
 			document.getElementById("created_by").innerHTML=data_var.created_by;
         });
 	});	
-*/
+
 </script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBRL6D4jfWOtmDd3ge1pRtkEx6OtrqdU8c&callback=myMap"></script>
 
