Event Image server code

--- a/src/main/resources/static/create_event.html
+++ b/src/main/resources/static/create_event.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-   <link rel="stylesheet" href="bootstrap.min.css">
+   <link rel="stylesheet" href="css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
   <script src="script/createEvent.js"></script>
   
@@ -12,7 +12,7 @@
   <link rel="stylesheet" th:href="@{css/create_event.css}">
   	    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-	    <link rel="stylesheet" type="text/css" th:href="@{HomePageStyle.css}">
+	    <link rel="stylesheet" type="text/css" th:href="@{css/HomePageStyle.css}">
   <style>
   body, html, .container-fluid {
      
