twitter handle in form.

--- a/src/main/resources/static/create_event.html
+++ b/src/main/resources/static/create_event.html
@@ -68,6 +68,12 @@
 <input type="text" class="form-control" name="location" id="event_location" th:field="*{location}">
 </div><br>
 <div class="row" style="">
+ <h4><span class="glyphicon glyphicon-map-marker" style="color:#2D80DF"></span>Twitter Handle</h4>
+</div>
+<div class="row">
+<input type="text" class="form-control" name="twitterHandle" id="twitterHandle" th:field="*{twitterHandle}">
+</div><br>
+<div class="row" style="">
 <h4><span class="glyphicon glyphicon-calendar" style="color:#2D80DF"></span> Details</h4></div>
 <div class="row">
 <div class="col-sm-2"><h5>Start Time</h5></div>
