--- a/src/main/resources/static/create_event.html
+++ b/src/main/resources/static/create_event.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-   <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
   <script src="script/createEvent.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans|Oxygen" rel="stylesheet">
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -14,38 +16,79 @@
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
 	    <link rel="stylesheet" type="text/css" th:href="@{css/HomePageStyle.css}">
   <style>
-  body, html, .container-fluid {
-     
-	 width:100%
+
+ .fa {
+padding-top:10px;
+  padding-right: 10px;
+  padding-left:10px;
+  padding-bottom:10px;
+  font-size: 20px;
+  width: 40px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 50%;
+}
+
+.fa:hover {
+    opacity: 0.7;
+	color:white;
+}
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+.fa-google {
+  background: #dd4b39;
+  color: white;
+}
+
+
+.fa-instagram {
+  background: #125688;
+  color: white;
+}
+
+body, html, .container-fluid {
+     font-family: 'Oxygen', sans-serif;
+
+	width: 100%;
 }
 </style>
 </head>
 <body>
 
-<nav class="navbar navbar-inverse" style="background-color:#AE1616;width:100%" >
-  <div class="container-fluid" style="text-align:left">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="homePage.html" id="abc">HoosierEvents</a>
-    </div>
-    <ul class="nav navbar-nav" >
-      <li id="homepage"><a class="top-nav-links" href="homePage.html" style="">Home</a></li>
-    </ul>
-	
-	<ul class="nav navbar-nav" id="explore">
-      <li><a class="top-nav-links" href="search_events.html" style="">Explore Events</a></li>
-    </ul>
-		<ul class="nav navbar-nav navbar-right">
-      <li><a href="#" style="">Sign Out</a></li>
-    </ul>
+<div class="container-fluid" style="background-color:;color:#AE1616;padding:10px;border-bottom:1px solid lightgrey;">
+<div class="row">
+<div class="col-sm-2"><h4 style="color:#AE0D0D;background-color:white;text-align:center">HoosierEvents</h4></div>
+<div class="col-sm-1"></div>
+<div class="col-sm-6"></div>
+<div class="col-sm-1">
+ <form action="/org_profile">
+        <button class="btn-default xyz" id="profilebutton"  style="color:#AE0D0D;background-color:white;border:0px;"><h5>Profile</h5></button>
+    </form>
+</div>
+<div class="col-sm-1">
+ <form action="/logout">
+        <button class="btn-default xyz" id="logoutbutt"  style="color:#AE0D0D;background-color:white;border:0px;"><h5>Logout</h5></button>
+    </form>
+</div>
 
-	</div>
-</nav>
+
+	</div></div>
 
 
 
 
 <div class="container" style="top:0%; width:100%;position:relative;">
-
+<div class="row">
 <div class="col-sm-2" style="background-color:">
 </div>
 <div class="col-sm-8" style=" ">
@@ -68,7 +111,7 @@
 <input type="text" class="form-control" name="location" id="event_location" th:field="*{location}">
 </div><br>
 <div class="row" style="">
- <h4><span class="glyphicon glyphicon-map-marker" style="color:#2D80DF"></span>Twitter Handle</h4>
+ <h4>Twitter Handle</h4>
 </div>
 <div class="row">
 <input type="text" class="form-control" name="twitterHandle" id="twitterHandle" th:field="*{twitterHandle}">
@@ -95,7 +138,7 @@
 </div>
 </div>
 <br>
-<div class="row">
+<!--<div class="row">
 <div class="col-sm-2"><h5>Time zone:</h5></div>
 <div class="col-sm-5">
 <select class="form-control" style="width:50%" name= "timeZOne" id="event_timezone">
@@ -105,7 +148,7 @@
       <option>GMT -7:00</option>
     </select>
 	</div>
-</div>
+</div>-->
 <br>
 <div class="row">
 <h4><span class="glyphicon glyphicon-file" style="color:#2D80DF"></span> Upload an Image</h4><small>Image must be of dimensions 280 X 140</small></div>
@@ -149,13 +192,13 @@ Select a category that best describes the event.
 </div>
 
 <br>
-<div class="row" style="background-color:white;border-radius:10px;">
+<!--<div class="row" style="background-color:white;border-radius:10px;">
 <br>
 <div class="col-md-4"><h4 style="color:#2D80DF;"> PROMOTE THIS EVENT?</h4><small>Spread the word! Get featured</small></div>
 <div class="col-sm-4"><h5><input type="radio" class="form-check-input"name="isPromoted" id="event_promote" checked>YES</h5> </div>
 <div class="col-sm-4"><h5><input type="radio" class="form-check-input" name="rad2">NO</h5></div>
 <br><br>
-</div>
+</div>-->
 <br><br><br>
 <div class="row">
 <div class="col-sm-4"></div>
@@ -169,58 +212,45 @@ Select a category that best describes the event.
 <div class="col-sm-2" style="background-color:">
 </div>
 
-</div>
+</div></div>
 
 <!-- <!FOOTER DIV> -->
-
-<div class="container-fluid footer">
-<div class="row" style="background-color:#AE1616; color:black">
-<div class="col-sm-3"><h5>Get Connected with us on Social Media</h5></div>
-<div class="col-sm-6"></div>
-<div class="col-sm-3">
-<div class="row" style="text-align:center">
-<!-- Facebook -->	<div class="col-sm-3">
-		            <a id="socialmedialink" href="#" class="fb-ic">
-		              <i class="fa fa-facebook white-text mr-4"> </i>
-		            </a>
-					</div>
-		            <!-- Twitter -->
-					<div class="col-sm-3">
-		            <a id="socialmedialink" href="#" class="tw-ic">
-		              <i class="fa fa-twitter white-text mr-4"> </i>
-		            </a>
-					</div>
-		            <!-- Google +-->
-					<div class="col-sm-3">
-		            <a id="socialmedialink" href="#" class="gplus-ic">
-		              <i class="fa fa-google-plus white-text mr-4"> </i>
-		            </a>
-					</div>
-</div>
-</div>
-</div>
-<div class="row" style="background-color:#534E4E">
-	<div class="col-sm-4">
-	<div class="row"><h5><b>Hoosier Events</b></h5></div>
-		<div class="row">Connect with other enthusiasts and do what you enjoy. Signup to explore and host events!</div>
+<div class="container-fluid" style="border-top:1px solid lightgrey;text-align:center;top:0%;height:auto;position:relative;background-color: !important;color:">
+<br><div class="row" style="background-color:;">
+	<!--<div class="col-sm-4">
+	<div class="row" style="background-color:lightgrey"><div class="col-sm-12"><h4 style="color:#AE0D0D">Hoosier Events</h4></div></div>
+		<div class="row" style="text-align:center;"><div class="col-sm-12">Connect with other enthusiasts and do what you enjoy. Signup to explore and host events!</div></div>
 	<br>
-	</div>
-	<div class="col-sm-4 links" style="color:white"><h5><b>Useful Links</b></h5>
+	</div>-->
+	<div class="col-sm-6 links" style="color:#AE0D0D;"><div class="row"  style="font-family: 'Oxygen', sans-serif;
+background-color:"><div class="col-sm-12"><h4>About HoosierEvents</h4></div></div>
 		
-		<div class="row"><a href="" style="color:#48A2BD">Your Account</a></div>
-		<div class="row"><a href="" style="color:#48A2BD">About us</a></div>
-		<div class="row"><a href="" style="color:#48A2BD">Help</a></div>
+		<div class="row"><div class="col-sm-12"><h5><a href="" style="font-family: 'Open Sans', sans-serif;
+color:#3C48AE">Sitemap</a></h5></div></div>
+		<div class="row"><div class="col-sm-12"><h5><a href="" style="font-family: 'Open Sans', sans-serif;
+color:#3C48AE">About us</a></h5></div></div>
+		<div class="row"><div class="col-sm-12"><h5><a href="" style="font-family: 'Open Sans', sans-serif;
+color:#3C48AE">FAQs</a></h5></div></div>
 		<br>
 	</div>
 	
-	<div class="col-sm-4"><h5><b>Contact Us</b></h5>
-				            <i class="fa fa-home mr-3"></i>&nbsp Bloomington, IN 47408, US
+	<div class="col-sm-6"><div class="row"  style="background-color:"><div class="col-sm-12" style="font-family: 'Oxygen', sans-serif;
+text-align:center"><h4 style="color:#AE0D0D;">Connect with Us</h4></div></div>
+				           <!--  <i class="fa fa-home mr-3"></i>&nbsp Bloomington, IN 47408, US
 							<br>
 				            <i class="fa fa-envelope mr-3"></i>&nbsp info@example.com
 							<br>
-							<i class="fa fa-phone mr-3"></i>&nbsp + 01 234 567 88
+							<i class="fa fa-phone mr-3"></i>&nbsp + 01 234 567 88 -->
 
+		<div class="row">
+		<div class="col-sm-4"></div>
 
+		<div class="col-sm-1" style="padding-right:25px;" ><a href="#" class="fa fa-facebook"></a></div>
+<div class="col-sm-1" style="padding-right:25px;"><a href="#" class="fa fa-twitter"></a></div>
+<div class="col-sm-1" style="padding-right:25px;" ><a href="#" class="fa fa-google"></a></div>
+<div class="col-sm-1" style="padding-right:25px;" ><a href="#" class="fa fa-instagram"></a></div>
+<div class="col-sm-4"></div>
+		</div>
 	</div>
 </div>
 </div>
